@@ -5,8 +5,8 @@ SUBDIRS = tests
 noinst_LIBRARIES = libnagiosplug.a
 
 
-libnagiosplug_a_SOURCES = utils_base.c utils_disk.c
-EXTRA_DIST = utils_base.h utils_disk.h
+libnagiosplug_a_SOURCES = utils_base.c utils_disk.c utils_tcp.c
+EXTRA_DIST = utils_base.h utils_disk.h utils_tcp.h
 
 INCLUDES = -I$(srcdir) -I$(top_srcdir)/gl -I$(top_srcdir)/intl -I$(top_srcdir)/plugins
 
